feat(desperdicio): tables and model created, routing
