# routes/api.php
@@ -3,6 +3,8 @@
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\ProdutoController;
 use App\Http\Controllers\Api\CategoriaController;
+use App\Http\Controllers\Api\DesperdicioController;
 
 Route::apiResource('produtos', ProdutoController::class);
 Route::apiResource('categorias', CategoriaController::class);
+Route::apiResource('desperdicios', DesperdicioController::class);
